--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node src/server/index.js",
     "build-prod": "webpack --config webpack.prod.js",
     "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
@@ -13,7 +13,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "express": "^4.17.1",
+    "fetch-mock": "^9.0.0-beta.2",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-fetch": "^2.6.0",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
   },
