--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-project",
+  "name": "evaluateNews-app",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,8 +9,8 @@
     "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Jiali",
+  "license": "MIT",
   "description": "",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
@@ -37,6 +37,7 @@
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.7.2",
+    "workbox-webpack-plugin": "^5.0.0"
   }
 }
